<?xml version="1.0"?>
<package format="2">
  <name>motoman_resources</name>
  <version>1.0.0</version>
  <description>
    <p>
      Shared configuration data for Motoman manipulators.
    </p>
    <p>
      This package contains common urdf / xacro resources used by
      Motoman related packages.
    </p>
  </description>
  <author email="douglas.smith@swri.org">Douglas Smith (Southwest Research Institute)</author>
  <maintainer email="douglas.smith@swri.org">Douglas Smith (Southwest Research Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/motoman</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>